test/compile-fail/resolution/use/no-name/expected.txt
error: unresolved item `b`
 --> top.rhdl:3:7
  |
3 | use a::b;
  |        ^ no `b` in `a`
